Added release notes for 4.4.15, 5.0.17, and 5.1.3.

--- a/_data/sidebars/release_5_1.yml
+++ b/_data/sidebars/release_5_1.yml
@@ -16,7 +16,7 @@ entries:
         url: '#management'
       - title: Hourly Datastore Statistics
         output: web, pdf
-        url: '#managament'
+        url: '#management'
       - title: Enclosure Visibility
         output: web, pdf
         url: '#management'
