--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,15 @@ defaults:
       sidebar: release_4_4
 
   - scope:
+      path: "release/4.4.15"
+      type: "pages"
+    values:
+      layout: "page"
+      comments: false
+      search: true
+      sidebar: release_4_4_15
+
+  - scope:
       path: "release/5.0"
       type: "pages"
     values:
@@ -107,6 +116,15 @@ defaults:
       sidebar: release_5_0
 
   - scope:
+      path: "release/5.0.17"
+      type: "pages"
+    values:
+      layout: "page"
+      comments: false
+      search: true
+      sidebar: release_5_0_17
+
+  - scope:
       path: "release/5.1"
       type: "pages"
     values:
@@ -114,6 +132,15 @@ defaults:
       comments: false
       search: true
       sidebar: release_5_1
+
+  - scope:
+      path: "release/5.1.3"
+      type: "pages"
+    values:
+      layout: "page"
+      comments: false
+      search: true
+      sidebar: release_5_1_3
 
   - scope:
       path: "guide/custom-certs"
