added 5.1.1 release notes and "wicked long" 5.1 rollup release notes
Most of our customers will be upgrading from 5.0 to 5.1.  I changed the 5.1
release notes to incorporate everything that went into 5.1.1, 5.1.2, and
5.1.3.  It looks impressive!

--- a/_config.yml
+++ b/_config.yml
@@ -134,6 +134,15 @@ defaults:
       sidebar: release_5_1
 
   - scope:
+      path: "release/5.1.1"
+      type: "pages"
+    values:
+      layout: "page"
+      comments: false
+      search: true
+      sidebar: release_5_1_1
+
+  - scope:
       path: "release/5.1.3"
       type: "pages"
     values:
